--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
     "require": {
-        "linecorp/line-bot-sdk": "^1.5"
+        "linecorp/line-bot-sdk": "^1.5",
+        "silex/silex": "^1.3",
+        "monolog/monolog": "^1.4",
+        "twig/twig": "^1.8",
+        "symfony/twig-bridge": "^2"
+    },
+    "require-dev": {
+        "heroku/heroku-buildpack-php": "*"
     }
 }
